fix(action-bar): do not display tooltip of invisible action buttons

--- a/src/components/action-bar/action-bar-item/action-bar-item.scss
+++ b/src/components/action-bar/action-bar-item/action-bar-item.scss
@@ -9,6 +9,7 @@ limel-action-bar-item {
 
     &:not([is-visible]) {
         opacity: 0;
+        pointer-events: none;
     }
 }
 
